--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     </title>
   </head>
   <body>
+    <img src="https://avatars.githubusercontent.com/u/86287497?v=4">
     <h1>HAI</h1>
 Hello there, awesome person!
   </body>
