--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     </title>
   </head>
   <body>
+    <ul>
+    <li>This</li>
+    <li>Is an</li>
+    <li>Unordered list</li>
+</ul>
+
     <img src="https://avatars.githubusercontent.com/u/86287497?v=4">
     <h1>HAI</h1>
 Hello there, awesome person!
