--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <li>This</li>
     <li>Is an</li>
     <li>Unordered list</li>
+      <li><a href="https://github.com">This is a link to GitHub!</a></li>
+
 </ul>
 
     <img src="https://avatars.githubusercontent.com/u/86287497?v=4">
