--- a/index.html
+++ b/index.html
@@ -2,20 +2,18 @@
   <head>
     <link rel="stylesheet" href="style.css">
     <title>
-      Intro
+      Welcome!!!
     </title>
   </head>
   <body>
     <ul>
-    <li>This</li>
-    <li>Is an</li>
-    <li>Unordered list</li>
-      <li><a href="https://github.com">This is a link to GitHub!</a></li>
+    <li><a href="https://www.google.com">GOOGLE</a></li>
+    <li><a href="https://github.com">GitHub!</a></li>
 
 </ul>
 
     <img src="https://avatars.githubusercontent.com/u/86287497?v=4">
-    <h1>HAI</h1>
-Hello there, awesome person!
+    <h1>Welcome</h1>
+    “Live as if you were to die tomorrow. Learn as if you were to live forever.”
   </body>
 </html>
